[package]
name = "solana-snapshot-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
threadpool = "1.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
