[package]
name = "solana-snapshot-fetcher"
author = "Alex Pyattaev"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fetcher for Solana snapshots"
keywords = ["solana", "snapshot"]
categories = [ "command-line-utilities", "cryptography::cryptocurrencies"]
repository = "https://github.com/alexpyattaev/solana-snapshot-fetcher"
homepage = "https://github.com/alexpyattaev/solana-snapshot-fetcher"
readme = "README.md"

[dependencies]

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
atomic_token_bucket = "0.1.0"
